all apis finalize
